k8s/gotify/alertmanager-gotify-bridge-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-gotify-bridge-nodeport
  namespace: monitoring
  labels:
    app: alertmanager-gotify-bridge
spec:
  type: NodePort
  selector:
    app: alertmanager-gotify-bridge
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30180
      protocol: TCP
      name: http
