k8s/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: monitoring
  labels:
    app: gotify
spec:
  selector:
    app: gotify
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
